[package]
name = "grocery-bot"
version = "0.1.0"
authors = ["miro <furtadomiro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegram-bot = "0.7"
futures = "0.3.4"
tokio = { version = "0.2", features = ["macros", "tcp", "dns", "io-util"] }

